static/css/index.css
:root {
    --white: #eeece1;
    --black: #131417;
    --medium-gray: #6a6d75;
}

* {
    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 37 37'%3E     %3Ccircle cx='18.5' cy='18.5' r='18' stroke='%236c6e77' fill='transparent' stroke-width='2px'/%3E   %3Ccircle cx='18.5' cy='18.28' r='1' stroke='%236c6e77' fill='%236c6e77' stroke-width='2px'/%3E  %3C/svg%3E") 8 8, auto;
}

html,
body {
    background-color: var(--black);
    margin: 0;
}

.landing__graphic {
    --mask: linear-gradient(to bottom, 
      rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 50%, 
      rgba(0,0,0, 0) 100%, rgba(0,0,0, 0) 0
    ) 100% 50% / 100% 100% repeat-x;

    opacity: 0.03;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 990;
    height: 100vh;
    width: 100vw;
    -webkit-mask: var(--mask); 
    mask: var(--mask);
}

.landing {
    position: absolute;
    top: 0;
    left: 0;
    --h-padding: 15rem;
    --v-padding: 1rem;
    display: flex;
    flex-direction: column;
    padding: var(--v-padding) var(--h-padding);
    height: calc(100vh - var(--v-padding) * 2);
    width: calc(100vw - var(--h-padding) * 2);
    z-index: 998;
}

.landing__quote__container {
    align-items: center;
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
}

@keyframes landing-quote-anim {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes landing-citation-anim {
    0% { opacity: 0; }
    50% { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes quote-dissolve {
    0% {
        filter: blur(0);
        opacity: 1;
    }
    30% {
        opacity: 0.9;
    }
    100% {
        filter: blur(50px);
        opacity: 0;
    }
}

@keyframes quote-dissolve-in {
    0% {
        filter: blur(50px);
        opacity: 0;
    }
    30% {
        opacity: 0.9;
    }
    100% {
        filter: blur(0);
        opacity: 1;
    }
}

.quote__dissolve {
    animation: quote-dissolve 1.5s ease-in-out forwards;
}

.quote__dissolve__in {
    animation: quote-dissolve-in 1.5s ease-in-out forwards;
}

.landing__quote__opening {
    animation: landing-quote-anim 2s ease-in-out forwards;
}

.landing__citation__opening {
    animation: landing-citation-anim 4s ease-in-out forwards;
}

.landing__quote {
    text-align: center;
    vertical-align: middle;
    color: var(--white);
    font-family: "Cormorant Garamond", serif;
    font-weight: 300;
    font-style: italic;
    font-size: 2.25rem;
    opacity: 1;
    cursor: url('/svg/cursor.svg') auto;
    filter: blur(0);
}

.landing__quote__citation {
    color: var(--medium-gray);
    font-family: "Cormorant Garamond", serif;
    font-weight: 300;
    font-style: italic;
    font-size: 1.25rem;
    opacity: 1;
    filter: blur(0);
}

.landing__scroll-indicator__container {
    display: flex;
    justify-content: center;
    height: 2rem;
    width: 100%;
}

.landing__scroll-indicator {
    height: 2rem;
    width: 2rem;
}

.landing__scroll-indicator > line {
    fill: none;
    stroke: var(--medium-gray);
    stroke-linecap: round;
    stroke-miterlimit: 10;
    stroke-width: 1px;
}

@keyframes lsi-anim-1 {
    0% { opacity: 0; }
    50% { opacity: 1; }
    100% { opacity: 0; }
}

.landing__scroll-indicator__anim-1 {
    opacity: 0;
    animation: lsi-anim-1 2s ease-in-out infinite;
}

@keyframes lsi-anim-2 {
    10% { opacity: 0; }
    60% { opacity: 1; }
    100% { opacity: 0; }
}

.landing__scroll-indicator__anim-2 {
    opacity: 0;
    animation: lsi-anim-2 2s ease-in-out infinite;
}

@keyframes lsi-anim-3 {
    20% { opacity: 0; }
    70% { opacity: 1; }
    100% { opacity: 0; }
}

.landing__scroll-indicator__anim-3 {
    opacity: 0;
    animation: lsi-anim-3 2s ease-in-out infinite;
}

.nav {
    --h-padding: 15rem;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 999;
    height: 3.5rem;
    display: flex;
    opacity: 0;
    padding: 0 var(--h-padding);
    width: calc(100vw - var(--h-padding) * 2);
    overflow: hidden;
}

@keyframes nav-anim {
    0% { 
        opacity: 0;
        transform: translateY(-16px);
    }
    75% {
        transform: translateY(0px);
    }
    100% { 
        opacity: 1; 
    }
}

.nav__fade-in {
    animation: nav-anim .75s ease-in-out forwards;
}

.nav__brand__container,
.nav__menu__container {
    display: flex;
    align-items: center;
    overflow: hidden;
}

.nav__menu__wrapper {
    position: relative;
    display: flex;
    transform: translateX(calc(2rem * 2));
    overflow: hidden;
}

@keyframes menu-open-anim {
    0% {
        transform: translateX(calc(2rem * 2));
    }
    100% {
        transform: translateX(0rem);
    }
}

.nav__menu__wrapper__open {
    animation: menu-open-anim .25s ease-in-out forwards;
}

@keyframes menu-close-anim {
    0% {
        transform: translateX(0rem);
    }
    100% {
        transform: translateX(calc(2rem * 2));
    }
}

.nav__menu__wrapper__close {
    animation: menu-close-anim .25s ease-in-out forwards;
}


/*
Menu Element Fading
================================================================================
*/


.nav__menu__fade {
    opacity: 0;
}

@keyframes menu-fade-in {
    0% {
        opacity: 0
    }
    100% {
        opacity: 1;
    }
}

.nav__menu__fade-in {
    animation: menu-fade-in .25s ease-in-out forwards;
}

@keyframes menu-fade-out {
    0% {
        opacity: 1
    }
    100% {
        opacity: 0;
    }
}

.nav__menu__fade-out {
    animation: menu-fade-out .25s ease-in-out forwards;
}

/*
Brand
================================================================================
*/

@keyframes shake {
    0% { transform: translate(.2px, .2px) rotate(0deg); }
    10% { transform: translate(-.2px, -.4px) rotate(-1deg); }
    20% { transform: translate(-.6px, 0px) rotate(1deg); }
    30% { transform: translate(.6px, .4px) rotate(0deg); }
    40% { transform: translate(.2px, -.2px) rotate(1deg); }
    50% { transform: translate(-.2px, .4px) rotate(-1deg); }
    60% { transform: translate(-.6px, .2px) rotate(0deg); }
    70% { transform: translate(.6px, .2px) rotate(-1deg); }
    80% { transform: translate(-.2px, -.2px) rotate(1deg); }
    90% { transform: translate(.2px, .4px) rotate(0deg); }
    100% { transform: translate(.2px, -.4px) rotate(-1deg); }
}

.nav__brand__image {
    height: 1rem;
    margin-right: .75rem;
}

.nav__brand__image:hover {
    animation: shake 0.5s;
    animation-iteration-count: infinite;
}

.nav__brand {
    color: var(--white);
    font-family: "Cormorant Garamond", serif;
    font-weight: 300;
    font-style: italic;
    font-size: 1.25rem;
}

/*
Menu Button
================================================================================
*/

.nav__menu__button {
    background: transparent;
    border: none;
    cursor: pointer;
    outline: none;
    margin: 0;
    margin-right: .75rem;
    padding: 0;
    width: 1.25rem;
    height: 1.25rem;
}

.nav__menu__button__icon,
.nav__menu__link__icon {
    height: 1.25rem;
    width: 1.25rem;
}

.nav__menu__button__icon > line,
.nav__menu__button__icon > path {
    stroke: var(--medium-gray);
    stroke-linecap: round;
    stroke-miterlimit: 10;
    stroke-width: 2.5px;
}

.nav__menu__link__icon > path {
    fill: var(--medium-gray);
    stroke-linecap: round;
    stroke-miterlimit: 10;
    stroke-width: 2.5px;
}

.test {
    width: 100vw;
    height: 100vh;
}

.nav__menu__button__l1 {
    d: path("M2.5 1 L29.5 1");
}

@keyframes menu-button-1-open {
    0% {
        d: path('M2.5 1 L29.5 1')
    }
    100% {
        d: path('M5 1 L29.5 13')
    }
}

.nav__menu__button-1__open {
    animation: menu-button-1-open .25s ease-in-out forwards;
}

@keyframes menu-button-1-close {
    0% {
        d: path('M5 1 L29.5 13')
    }
    100% {
        d: path('M2.5 1 L29.5 1')
    }
}

.nav__menu__button-1__close {
    animation: menu-button-1-close .25s ease-in-out forwards;
}

.nav__menu__button__l3 {
    d: path("M2.5 25 L29.5 25");
}

@keyframes menu-button-3-open {
    0% {
        d: path('M2.5 25 L29.5 25')
    }
    100% {
        d: path('M5 25 L29.5 13')
    }
}

.nav__menu__button-3__open {
    animation: menu-button-3-open .25s ease-in-out forwards;
}

@keyframes menu-button-3-close {
    0% {
        d: path('M5 25 L29.5 13')
    }
    100% {
        d: path('M2.5 25 L29.5 25')
    }
}

.nav__menu__button-3__close {
    animation: menu-button-3-close .25s ease-in-out forwards;
}

.nav__menu__button__l2 {
    d: path("M5.5 13 L26.5 13");
}

@keyframes menu-button-2-open {
    0% {
        d: path("M5.5 13 L26.5 13")
    }
    100% {
        d: path("M26.5 13 L26.5 13")
    }
}

.nav__menu__button-2__open {
    animation: menu-button-2-open .25s ease-in-out forwards;
}

@keyframes menu-button-2-close {
    0% {
        d: path('M29.5 13 L29.5 13')
    }
    100% {
        d: path("M5.5 13 L26.5 13")
    }
}

.nav__menu__button-2__close {
    animation: menu-button-2-close .25s ease-in-out forwards;
}

